@@ -1,3 +1,7 @@
+2009-08-24  Michiel Roos <michiel@netcreators.com>
+
+	* #11700: use _GPmerged instead of GParrayMerged  (Thanks to Georg Ringer)
+
 2009-08-20  Michiel Roos <michiel@netcreators.com>
 
 	* #11743: DAM doesn't respekt skin images (Thanks to Georg Ringer)
